# cartoons-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  cartoons.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  cartoons.rockspec  cartoons_sdk.lua  cartoons_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  cartoons_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  cartoons_sdk.py  cartoons_types.py  config.py  features.py  pyproject.toml
py/core/: response.py  result.py
py/entity/: cartoon_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  idempotency_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  ratelimit_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_cartoon_direct.py  test_cartoon_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_method.py  register.py  result_headers.py  transform_response.py
rb/: AGENTS.md  (+8 more)
(+402 files in other folders)
